  URLs containing the match as substring. This is now fixed.
- When a filename is derived from a page's title, it's now shortened to the
  maximum filename length permitted by the filesystem.
- `:enter-mode register` crashed since v1.13.0, it now displays an error
  instead.
- Crash with certain invalid URLs in resources with the QtWebKit backend.

v1.13.1 (2020-07-17)
--------------------

Fixed
~~~~~

- With Qt 5.14, shared workers are now disabled. This works around a crash in
  QtWebEngine on certain sites (like the Epic Games Store or the Unreal Engine
  page).
- When a window is closed, the tab it contains are now correctly shut down
  (closing e.g. any dialogs which are still open for those tabs).
- The Qt 5.15 session workaround now loads the correct (rather than the last)
  page when `:back` was used before saving a session.
- In certain situations on Windows, qutebrowser fails to find the username of
  the user launching qutebrowser (most likely due to a bug in the application
  launching it). When this happens, an error is now displayed instead of
  crashing.
- Certain `autoconfig.yml` with an invalid structure could lead to crashes,
  which are now fixed.
- Generating docs with `asciidoc2html.py` (e.g. via `mkvenv.py`) now works
  correctly without Pygments being installed system-wide.
- Ever since Qt 5.9, when `input.mouse.rocker_gestures` was enabled, the
  context menu still was shown when clicking the right mouse button, thus
  preventing the rocker gestures. This is now fixed.
- Clicking the inspector switched from existing modes (such as passthrough) to
  normal mode since v1.13.0. Now insert mode is only entered when the inspector
  is clicked in normal mode.
- Pulseaudio now shows qutebrowser's audio streams as qutebrowser correctly,
  rather than showing them as Chromium with some Qt versions.
- If `:help` was called with a deprecated command (e.g. `:help :inspector`),
  the help page would show despite deprecated commands not being documented.